SUFFIXES = .cc .h


testssystemdir=@CEYLAN_TEST_DIR@/system


testssystem_PROGRAMS = \
	testCeylanEnvironmentVariable          \
	testCeylanFileAndDirectories           \
	testCeylanFileLocator                  \
	testCeylanMemoryStream                 \
	testCeylanSignals                      \
	testCeylanSystemInformation            \
	testCeylanThread                       \
	testCeylanTime


testCeylanEnvironmentVariable_SOURCES = testCeylanEnvironmentVariable.cc
testCeylanFileAndDirectories_SOURCES  = testCeylanFileAndDirectories.cc
testCeylanFileLocator_SOURCES         = testCeylanFileLocator.cc
testCeylanMemoryStream_SOURCES        = testCeylanMemoryStream.cc
testCeylanSignals_SOURCES             = testCeylanSignals.cc
testCeylanSystemInformation_SOURCES   = testCeylanSystemInformation.cc
testCeylanThread_SOURCES              = testCeylanThread.cc
testCeylanTime_SOURCES                = testCeylanTime.cc

