
EXTRA_DIST = \
	.Xdefaults                 \
	.bash_profile              \
	.bashrc                    \
	.bashrc.Linux              \
	.bashrc.common             \
	.bashrc.local              \
	.bashrc.minimal            \
	.cvsrc                     \
	.vimrc                     \
	nedit.rc                   \
	retrieveEnvironment.sh
